fix: adjust the employee style page

--- a/EmployeeStyle.html
+++ b/EmployeeStyle.html
@@ -78,7 +78,7 @@
 							<div class="wrap-about">
 								<div class="w-content">
 									<p class="head-about" style="font-size: 30px">
-										GROUP LEADER
+										TEAM LEADER
 									</p>
 								</div>
 							</div>
@@ -92,38 +92,25 @@
 											<tr>
 												<td class="title">Name </td>
 												<td class="break">:</td>
-												<td>  </td>
+												<td>Zhao Yiran</td>
 											</tr>
 											<tr>
 												<td class="title">Phone </td>
 												<td class="break">:</td>
-												<td>   </td>
+												<td>13395843702</td>
 											</tr>
 											<tr>
 												<td class="title">Email </td>
 												<td class="break">:</td>
-												<td>   </td>
+												<td>yiran.zhao@ucdconnect.ie</td>
 											</tr>
 											<tr>
 												<td class="title">Address </td>
 												<td class="break">:</td>
-												<td>    </td>
+												<td>University College Dublin
+													Belfield, Dublin 4, Ireland.</td>
 											</tr>
-											<tr>
-												<td class="title">Skype </td>
-												<td class="break">:</td>
-												<td> bdgpixel</td>
-											</tr>
-											<tr>
-												<td class="title">Dribbble </td>
-												<td class="break">:</td>
-												<td> Muh-Reza</td>
-											</tr>
-											<tr>
-												<td class="title">Behance</td>
-												<td class="break">:</td>
-												<td> m-reza</td>
-											</tr>
+
 										</table>
 									</div>
 								</div>
@@ -147,14 +134,10 @@
 						<div class="col-md-12">
 							<div class="wrap-about">
 								<div class="w-content">
-									<p class="head-about">
-										Design is the method of putting form and content together. Design, just as art, has multiple definitions there is no single definition. Design can be art. Design can be aesthetics. Design is so simple, that's why it is so complicated.
+									<p class="head-about" style="font-size: 30px">
+										EXCELLENT DELIVERY MAN
 									</p>
 
-									<h5 class="name">
-
-									</h5>
-									<img alt="signature" src="images/signature.png">
 								</div>
 							</div>
 						</div>
@@ -167,37 +150,23 @@
 											<tr>
 												<td class="title">Name </td>
 												<td class="break">:</td>
-												<td>  </td>
+												<td>Li Dianzhe</td>
 											</tr>
 											<tr>
 												<td class="title">Phone </td>
 												<td class="break">:</td>
-												<td>   </td>
+												<td>15601280731</td>
 											</tr>
 											<tr>
 												<td class="title">Email </td>
 												<td class="break">:</td>
-												<td>   </td>
+												<td>dianzhe.li@ucdconnect.ie</td>
 											</tr>
 											<tr>
 												<td class="title">Address </td>
 												<td class="break">:</td>
-												<td>    </td>
-											</tr>
-											<tr>
-												<td class="title">Skype </td>
-												<td class="break">:</td>
-												<td> bdgpixel</td>
-											</tr>
-											<tr>
-												<td class="title">Dribbble </td>
-												<td class="break">:</td>
-												<td> Muh-Reza</td>
-											</tr>
-											<tr>
-												<td class="title">Behance</td>
-												<td class="break">:</td>
-												<td> m-reza</td>
+												<td>University College Dublin
+													Belfield, Dublin 4, Ireland.</td>
 											</tr>
 										</table>
 									</div>
@@ -224,7 +193,7 @@
 							<div class="wrap-about">
 								<div class="w-content">
 									<p class="head-about"  style="font-size: 30px">
-										Design
+										FLOWER DESIGNER
 									</p>
 								</div>
 							</div>
@@ -238,37 +207,23 @@
 											<tr>
 												<td class="title">Name </td>
 												<td class="break">:</td>
-												<td>  </td>
+												<td>Liu Yuxin</td>
 											</tr>
 											<tr>
 												<td class="title">Phone </td>
 												<td class="break">:</td>
-												<td>   </td>
+												<td>15010831915</td>
 											</tr>
 											<tr>
 												<td class="title">Email </td>
 												<td class="break">:</td>
-												<td>   </td>
+												<td>yuxin.liu@ucdconnect.ie</td>
 											</tr>
 											<tr>
 												<td class="title">Address </td>
 												<td class="break">:</td>
-												<td>    </td>
-											</tr>
-											<tr>
-												<td class="title">Skype </td>
-												<td class="break">:</td>
-												<td> bdgpixel</td>
-											</tr>
-											<tr>
-												<td class="title">Dribbble </td>
-												<td class="break">:</td>
-												<td> Muh-Reza</td>
-											</tr>
-											<tr>
-												<td class="title">Behance</td>
-												<td class="break">:</td>
-												<td> m-reza</td>
+												<td>University College Dublin
+													Belfield, Dublin 4, Ireland.</td>
 											</tr>
 										</table>
 									</div>
@@ -295,13 +250,8 @@
 							<div class="wrap-about">
 								<div class="w-content">
 									<p class="head-about" style="font-size: 30px">
-										 why it is so complicated.
+										EXCELLENT PERSONNEL
 									</p>
-
-									<h5 class="name">
-
-									</h5>
-									<img alt="signature" src="images/signature.png">
 								</div>
 							</div>
 						</div>
@@ -314,37 +264,23 @@
 											<tr>
 												<td class="title">Name </td>
 												<td class="break">:</td>
-												<td>  </td>
+												<td>Jia Tiancheng</td>
 											</tr>
 											<tr>
 												<td class="title">Phone </td>
 												<td class="break">:</td>
-												<td>   </td>
+												<td>17812102795</td>
 											</tr>
 											<tr>
 												<td class="title">Email </td>
 												<td class="break">:</td>
-												<td>   </td>
+												<td>tiancheng.jia@ucdconnect.ie</td>
 											</tr>
 											<tr>
 												<td class="title">Address </td>
 												<td class="break">:</td>
-												<td>    </td>
-											</tr>
-											<tr>
-												<td class="title">Skype </td>
-												<td class="break">:</td>
-												<td> bdgpixel</td>
-											</tr>
-											<tr>
-												<td class="title">Dribbble </td>
-												<td class="break">:</td>
-												<td> Muh-Reza</td>
-											</tr>
-											<tr>
-												<td class="title">Behance</td>
-												<td class="break">:</td>
-												<td> m-reza</td>
+												<td>University College Dublin
+													Belfield, Dublin 4, Ireland.</td>
 											</tr>
 										</table>
 									</div>
@@ -371,13 +307,10 @@
 							<div class="wrap-about">
 								<div class="w-content">
 									<p class="head-about"  style="font-size: 30px">
-										 that's why it is so complicated.
+										 FLORIST
 									</p>
 
-									<h5 class="name">
 
-									</h5>
-									<img alt="signature" src="images/signature.png">
 								</div>
 							</div>
 						</div>
@@ -390,37 +323,23 @@
 											<tr>
 												<td class="title">Name </td>
 												<td class="break">:</td>
-												<td>  </td>
+												<td>Fu Han</td>
 											</tr>
 											<tr>
 												<td class="title">Phone </td>
 												<td class="break">:</td>
-												<td>   </td>
+												<td>13846669675</td>
 											</tr>
 											<tr>
 												<td class="title">Email </td>
 												<td class="break">:</td>
-												<td>   </td>
+												<td>han.fu1@ucdconnct.ie</td>
 											</tr>
 											<tr>
 												<td class="title">Address </td>
 												<td class="break">:</td>
-												<td>    </td>
-											</tr>
-											<tr>
-												<td class="title">Skype </td>
-												<td class="break">:</td>
-												<td> bdgpixel</td>
-											</tr>
-											<tr>
-												<td class="title">Dribbble </td>
-												<td class="break">:</td>
-												<td> Muh-Reza</td>
-											</tr>
-											<tr>
-												<td class="title">Behance</td>
-												<td class="break">:</td>
-												<td> m-reza</td>
+												<td>University College Dublin
+													Belfield, Dublin 4, Ireland.</td>
 											</tr>
 										</table>
 									</div>
@@ -447,13 +366,9 @@
 							<div class="wrap-about">
 								<div class="w-content">
 									<p class="head-about"  style="font-size: 30px">
-										that's why it is so complicated.
+										FLORIST
 									</p>
 
-									<h5 class="name">
-
-									</h5>
-									<img alt="signature" src="images/signature.png">
 								</div>
 							</div>
 						</div>
@@ -466,37 +381,23 @@
 											<tr>
 												<td class="title">Name </td>
 												<td class="break">:</td>
-												<td>  </td>
+												<td>Shen Shuyi</td>
 											</tr>
 											<tr>
 												<td class="title">Phone </td>
 												<td class="break">:</td>
-												<td>   </td>
+												<td>13846669675</td>
 											</tr>
 											<tr>
 												<td class="title">Email </td>
 												<td class="break">:</td>
-												<td>   </td>
+												<td>shuyi.shen@ucdconnect.ie</td>
 											</tr>
 											<tr>
 												<td class="title">Address </td>
 												<td class="break">:</td>
-												<td>    </td>
-											</tr>
-											<tr>
-												<td class="title">Skype </td>
-												<td class="break">:</td>
-												<td> bdgpixel</td>
-											</tr>
-											<tr>
-												<td class="title">Dribbble </td>
-												<td class="break">:</td>
-												<td> Muh-Reza</td>
-											</tr>
-											<tr>
-												<td class="title">Behance</td>
-												<td class="break">:</td>
-												<td> m-reza</td>
+												<td>University College Dublin
+													Belfield, Dublin 4, Ireland.</td>
 											</tr>
 										</table>
 									</div>
@@ -520,7 +421,9 @@
 							<span>Skills</span>
 						</h3>
 						<p class="content-detail">
-							Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+							What our team members good at..
+							<br>
+							:D
 						</p>
 					</div>
 					<div class="col-md-9 content-right">
@@ -528,7 +431,7 @@
 						<div class="skillst">
 							<div class="skillbar" data-percent="78%">
 								<div class="title head-sm">
-									HTML 5
+									UI Design
 								</div>
 								<div class="count-bar">
 									<div class="count"></div>
@@ -536,7 +439,7 @@
 							</div>
 							<div class="skillbar" data-percent="91%">
 								<div class="title head-sm">
-									CSS 4
+									JavaScript
 								</div>
 								<div class="count-bar">
 									<div class="count"></div>
@@ -544,7 +447,7 @@
 							</div>
 							<div class="skillbar" data-percent="58%">
 								<div class="title head-sm">
-									jQuery
+									Photoshop
 								</div>
 								<div class="count-bar">
 									<div class="count"></div>
@@ -560,7 +463,7 @@
 							</div>
 							<div class="skillbar" data-percent="95%">
 								<div class="title head-sm">
-									Photoshop
+									HTML5
 								</div>
 								<div class="count-bar">
 									<div class="count"></div>
@@ -581,7 +484,7 @@
 			<div class="footer-bottom">
 				<div class="container">
 					<div class="row" style="text-align: center">
-						Copyright © 2021 Group9_PNG Inc. All Rights Reserved.<a target="_blank" href="http://www.mycodes.net/">网站模板</a>
+						Copyright © 2021 Group9_PNG Inc. All Rights Reserved.
 					</div>
 				</div>
 			</div>
