feature: add language switching button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="header-section d-none d-lg-block" >
 <!--    背景透明    -->
 <!--    style="background: linear-gradient(0deg, rgba(255,255,255,0.3)0%, rgba(145,145,145,0.3)100%)!important"    -->
+
         <div class="main-header">
             <div class="container position-relative">
                 <div class="row align-items-center">
@@ -131,6 +132,9 @@
                                     </ul>
                                 </div>
                             </div>
+                            <div style="margin-left: 8%; margin-right: 5%;"><a href="#">zh</a></div>
+                            <div style="float:left;width: 1px;height: 20px; background: darkgray;"></div>
+                            <div style="margin-left: 5%;"><a href="#">en</a> </div>
                         </div>
                     </div>
                 </div>
@@ -146,7 +150,7 @@
             <div class="row align-items-center">
                 <div class="col -6">
                     <div class="header-logo">
-                        <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
+                        <a href="index.html"><img src="assets/images/logo/logo_small.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-6">
@@ -163,12 +167,9 @@
                                     <li><a href="#">Log Out</a></li>
                                 </ul>
                             </div>
-                            <div class="header-account-list mini-cart">
-                                <a href="#">
-                                    <i class="icon-shopping-cart"></i>
-                                    <span class="item-count ">0</span>
-                                </a>
-                            </div>
+                            <div style="margin-left: 10%; margin-right: 5%;"><a href="#">zh</a></div>
+                            <div style="float:left;width: 1px;height: 20px; background: darkgray;"></div>
+                            <div style="margin-left: 5%; margin-right: 10%"><a href="#">en</a> </div>
                             <div class="header-account-list mobile-menu-trigger">
                                 <button id="menu-trigger">
                                     <span></span>
