fix: adjust the placeholder of search icon

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <div class="header-meta-info">
                             <div class="header-search">
                                 <form action="#">
-                                    <input type="text" placeholder="Search our store ">
+                                    <input type="text" placeholder="Search...">
                                     <button><i class="icon-search"></i></button>
                                 </form>
                             </div>
@@ -167,9 +167,7 @@
                                     <li><a href="#">Log Out</a></li>
                                 </ul>
                             </div>
-                            <div style="margin-left: 10%; margin-right: 5%;"><a href="#">zh</a></div>
-                            <div style="float:left;width: 1px;height: 20px; background: darkgray;"></div>
-                            <div style="margin-left: 5%; margin-right: 10%"><a href="#">en</a> </div>
+
                             <div class="header-account-list mobile-menu-trigger">
                                 <button id="menu-trigger">
                                     <span></span>
@@ -178,6 +176,9 @@
                                 </button>
                             </div>
                         </div>
+                        <div style="margin-left: 10%; margin-right: 5%;"><a href="#">zh</a></div>
+                        <div style="float:left;width: 1px;height: 20px; background: darkgray;"></div>
+                        <div style="margin-left: 5%; margin-right: 10%"><a href="#">en</a> </div>
                     </div>
                 </div>
             </div>
