--- a/loggedin-index.html
+++ b/loggedin-index.html
@@ -117,7 +117,7 @@
                         <div class="header-meta-info">
                             <div class="header-search">
                                 <form action="#">
-                                    <input type="text" placeholder="Search our store ">
+                                    <input type="text" placeholder="Search...">
                                     <button><i class="icon-search"></i></button>
                                 </form>
                             </div>
@@ -134,7 +134,11 @@
                                         <i class="icon-shopping-bag"></i>
                                     </a>
                                 </div>
+
                             </div>
+                            <div style="margin-left: 8%; margin-right: 5%;"><a href="#">zh</a></div>
+                            <div style="float:left;width: 1px;height: 20px; background: darkgray;"></div>
+                            <div style="margin-left: 5%;"><a href="#">en</a> </div>
                         </div>
                     </div>
                 </div>
@@ -150,7 +154,7 @@
             <div class="row align-items-center">
                 <div class="col -6">
                     <div class="header-logo">
-                        <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
+                        <a href="index.html"><img src="assets/images/logo/logo_small.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-6">
@@ -169,7 +173,7 @@
                             </div>
                             <div class="header-account-list mini-cart">
                                 <a href="#">
-                                    <i class="icon-shopping-cart"></i>
+                                    <i class="icon-shopping-bag"></i>
                                     <span class="item-count ">0</span>
                                 </a>
                             </div>
@@ -181,6 +185,9 @@
                                 </button>
                             </div>
                         </div>
+                        <div style="margin-left: 10%; margin-right: 5%;"><a href="#">zh</a></div>
+                        <div style="float:left;width: 1px;height: 20px; background: darkgray;"></div>
+                        <div style="margin-left: 5%; margin-right: 10%"><a href="#">en</a> </div>
                     </div>
                 </div>
             </div>
