login-signup 改进

--- a/trading/shop-list.html
+++ b/trading/shop-list.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="../assets/css/style.min.css">
     <link href="../plugins/tanchuang/css/xtiper.css" type="text/css" rel="stylesheet"/>
     <script src="../plugins/tanchuang/js/xtiper.min.js" type="text/javascript"></script>
-
 </head>
 
 <body>
@@ -708,7 +707,7 @@
                 },
                 error: function () {
                     xtip.alert("Please Login First!");
-                    window.location.href = '../user/login.html';
+                    window.location.href = '../user/login.php';
                 }
             });
         }
