--- a/trading/shop-single.html
+++ b/trading/shop-single.html
@@ -34,7 +34,7 @@
     <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
 
 
-    <!--====== Use the minified version files listed below for better performance and remove the files listed above ======-->
+    <!--====== Use the minified version Apendix listed below for better performance and remove the Apendix listed above ======-->
     <link rel="stylesheet" href="../assets/css/plugins-min/plugins.min.css">
     <link rel="stylesheet" href="../assets/css/style.min.css">
     <link href="../plugins/tanchuang/css/xtiper.css" type="text/css" rel="stylesheet"/>
@@ -1158,7 +1158,7 @@
 <script src="assets/js/plugins/ajax-contact.js"></script> -->
 
 
-<!--====== Use the minified version files listed below for better performance and remove the files listed above ======-->
+<!--====== Use the minified version Apendix listed below for better performance and remove the Apendix listed above ======-->
 <script src="../assets/js/plugins.min.js"></script>
 
 <!-- Main JS -->
