--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div style="margin-left: 8%; margin-right: 5%;"><a href="#">zh</a></div>
+                            <div style="margin-left: 8%; margin-right: 5%;"><a href="index-zh.heml">zh</a></div>
                             <div style="float:left;width: 1px;height: 20px; background: darkgray;"></div>
-                            <div style="margin-left: 5%;"><a href="#">en</a> </div>
+                            <div style="margin-left: 5%;"><a href="index.html">en</a> </div>
                         </div>
                     </div>
                 </div>
