--- a/trading/shop-list.html
+++ b/trading/shop-list.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Kngu - Flower HTML Bootstrap 5 Template </title>
+    <title>Shop List</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="../assets/images/favicon.png">
+    <link rel="shortcut  icon" href="../images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../assets/css/helper.css">
     <link rel="stylesheet" href="../assets/css/plugins-min/plugins.min.css">
     <link rel="stylesheet" href="../assets/css/style.min.css">
