--- a/presentation/about.html
+++ b/presentation/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>About</title>
+	<title>About Us</title>
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<meta content="Bodo - Simple One Page Personal" name="description">
@@ -10,12 +10,13 @@
 
 
 	<!--styles-->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/owl.carousel.css" rel="stylesheet">
-	<link href="css/owl.theme.css" rel="stylesheet">
-	<link href="css/magnific-popup.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
-	<link href="css/responsive.css" rel="stylesheet">
+	<link href="../style/css/bootstrap.min.css" rel="stylesheet">
+	<link href="../style/css/owl.carousel.css" rel="stylesheet">
+	<link href="../style/css/owl.theme.css" rel="stylesheet">
+	<link href="../style/css/magnific-popup.css" rel="stylesheet">
+	<link href="../style/css/style.css" rel="stylesheet">
+	<link href="../style/css/responsive.css" rel="stylesheet">
+	<link rel="shortcut  icon" href="../images/favicon.ico" type="image/x-icon" />
 
 
 	<!--fonts google-->
@@ -47,7 +48,7 @@
 	<!--CONTENT-->
 	<div class="content">
 		<!--HOME-->
-		<section id="home">
+		<section id="home" style="background-image: url('../images/background.png');">
 			<div class="container">
 				<div class="row">
 					<div class="wrap-hero-content">
@@ -78,8 +79,8 @@
 				<p>We promise to deliver within 2 hours in urban areas, 3--5 hours in suburban and remote areas, and next day delivery to foreign countries, Hong Kong, Macau and Taiwan by consulting our customer service.</p>
 				<h1>Service Features</h1>
 				<p>In today's society where spiritual and cultural life is improving, the demand for flowers is getting more and more prosperous. Flower delivery is a very popular flower delivery mode nowadays, flower senders do not need to go to the florist to buy flowers, just use the phone, computer, network and other tools, contact with professional flower delivery China to send flowers to the recipient's hands, the flower senders can not leave home to send the bright flowers to the heart of the person holding, no waste of time, no crowded cars, no waiting, everything we can do for you!</p>
-				<img src="images/about1.png" width="800" height="400">
-				<img src="images/about2.png" width="800" height="400" style="margin-top: 5px;">
+				<img src="../images/about1.png" width="800" height="400">
+				<img src="../images/about2.png" width="800" height="400" style="margin-top: 5px;">
 			</div>
 		</div>
 		</div>
@@ -106,16 +107,16 @@
 </div>
 
 
-<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
-<script src="js/jquery.appear.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
-<script src="js/classie.js" type="text/javascript"></script>
-<script src="js/owl.carousel.min.js" type="text/javascript"></script>
-<script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
-<script src="js/masonry.pkgd.min.js" type="text/javascript"></script>
-<script src="js/masonry.js" type="text/javascript"></script>
-<script src="js/smooth-scroll.min.js" type="text/javascript"></script>
-<script src="js/typed.js" type="text/javascript"></script>
-<script src="js/main.js" type="text/javascript"></script>
+<script src="../style/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+<script src="../style/js/jquery.appear.js" type="text/javascript"></script>
+<script src="../style/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="../style/js/classie.js" type="text/javascript"></script>
+<script src="../style/js/owl.carousel.min.js" type="text/javascript"></script>
+<script src="../style/js/jquery.magnific-popup.min.js" type="text/javascript"></script>
+<script src="../style/js/masonry.pkgd.min.js" type="text/javascript"></script>
+<script src="../style/js/masonry.js" type="text/javascript"></script>
+<script src="../style/js/smooth-scroll.min.js" type="text/javascript"></script>
+<script src="../style/js/typed.js" type="text/javascript"></script>
+<script src="../style/js/main.js" type="text/javascript"></script>
 </body>
 </html>
