--- a/spread/spread.html
+++ b/spread/spread.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Spread</title>
     <link rel="stylesheet" href="../style/reset.css">
     <link rel='stylesheet' href='../style/bootstrap.css'>
     <link rel="stylesheet" href="./style.css">
 
     <link rel="stylesheet" href="../kugu-asset/css/style.min.css">
     <link rel="stylesheet" href="../style/personal-profile.css">
+    <link rel="shortcut  icon" href="../images/favicon.ico" type="image/x-icon" />
 
     <link href="../plugins/tanchuang/css/xtiper.css" type="text/css" rel="stylesheet"/>
     <script src="../plugins/tanchuang/js/xtiper.min.js" type="text/javascript"></script>
