--- a/trading/shop-single.html
+++ b/trading/shop-single.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Kngu - Flower HTML Bootstrap 5 Template </title>
+    <title>Shop Detail</title>
     <meta name="robots" content="noindex, follow"/>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="../assets/images/favicon.png">
+    <link rel="shortcut  icon" href="../images/favicon.ico" type="image/x-icon" />
 
     <!-- CSS
 	============================================ -->
