--- a/shop-single.html
+++ b/shop-single.html
@@ -511,12 +511,6 @@
 <!--                            <span class="discount">-34%</span>-->
                         </div>
                         <p class="description"></p>
-
-                        <?php
-                        session_start();
-                        $from_id = $_SESSION['username'];
-                        $href = "http://42.193.97.82/index.php/index/index/index?fromid="+$from_id+"&toid=101";
-                        ?>
                         $_SESSION['views']=1;
 
                         <ul class="product-additional-information">
@@ -527,7 +521,8 @@
                                 <button><i class="fa fa-truck"></i> Shipping</button>
                             </li>
                             <li>
-                                <a href="<?php echo $href; ?>"><button><i class="ti-email"></i> Ask About This product</button></a>
+<!--                             href = " http://42.193.97.82/index.php/index/index/index?fromid=" + _SESSION['uid'] +"&toid=101"   -->
+                                <a href="<?php echo $href ?>"><button><i class="ti-email"></i> Ask About This product</button></a>
                             </li>
                         </ul>
 
