update the chat system

--- a/shop-list.html
+++ b/shop-list.html
@@ -95,7 +95,7 @@
                                                     <a class="mega-title" href="#">Shop Single</a>
 
                                                     <ul class="mega-item">
-                                                        <li><a href="shop-single.html">Shop Single</a></li>
+                                                        <li><a href="shop-single.php">Shop Single</a></li>
                                                         <li><a href="shop-single-affiliate.html">Shop Single Affiliate</a></li>
                                                         <li><a href="shop-single-variable.html">Shop Single Variable</a></li>
                                                         <li><a href="shop-single-group.html">Shop Single Group</a></li>
@@ -190,11 +190,11 @@
                                             <li class="product-cart">
                                                 <div class="single-cart-box">
                                                     <div class="cart-img">
-                                                        <a href="shop-single.html"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
+                                                        <a href="shop-single.php"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
                                                         <span class="pro-quantity">1x</span>
                                                     </div>
                                                     <div class="cart-content">
-                                                        <h6 class="title"><a href="shop-single.html">Rock Soapwort</a></h6>
+                                                        <h6 class="title"><a href="shop-single.php">Rock Soapwort</a></h6>
                                                         <div class="cart-price">
                                                             <span class="sale-price">$70.00</span>
                                                             <span class="regular-price">$80.00</span>
@@ -204,11 +204,11 @@
                                                 </div>
                                                 <div class="single-cart-box">
                                                     <div class="cart-img">
-                                                        <a href="shop-single.html"><img src="assets/images/cart/cart-2.jpg" alt=""></a>
+                                                        <a href="shop-single.php"><img src="assets/images/cart/cart-2.jpg" alt=""></a>
                                                         <span class="pro-quantity">1x</span>
                                                     </div>
                                                     <div class="cart-content">
-                                                        <h6 class="title"><a href="shop-single.html">Rock Soapwort</a></h6>
+                                                        <h6 class="title"><a href="shop-single.php">Rock Soapwort</a></h6>
                                                         <div class="cart-price">
                                                             <span class="sale-price">$70.00</span>
                                                             <span class="regular-price">$80.00</span>
@@ -218,11 +218,11 @@
                                                 </div>
                                                 <div class="single-cart-box">
                                                     <div class="cart-img">
-                                                        <a href="shop-single.html"><img src="assets/images/cart/cart-3.jpg" alt=""></a>
+                                                        <a href="shop-single.php"><img src="assets/images/cart/cart-3.jpg" alt=""></a>
                                                         <span class="pro-quantity">1x</span>
                                                     </div>
                                                     <div class="cart-content">
-                                                        <h6 class="title"><a href="shop-single.html">Rock Soapwort</a></h6>
+                                                        <h6 class="title"><a href="shop-single.php">Rock Soapwort</a></h6>
                                                         <div class="cart-price">
                                                             <span class="sale-price">$70.00</span>
                                                             <span class="regular-price">$80.00</span>
@@ -337,7 +337,7 @@
                                     <a class="mega-title" href="#">Shop Single</a>
 
                                     <ul class="mega-item">
-                                        <li><a href="shop-single.html">Shop Single</a></li>
+                                        <li><a href="shop-single.php">Shop Single</a></li>
                                         <li><a href="shop-single-affiliate.html">Shop Single Affiliate</a></li>
                                         <li><a href="shop-single-variable.html">Shop Single Variable</a></li>
                                         <li><a href="shop-single-group.html">Shop Single Group</a></li>
